       contributed by Alexander Davidenko
  * feature, italian translation (#75)
       contributed by Alberto Vincenzi
  * feature, spanish translation (#77)
       contributed by Juan Pablo
  * feature, dutch translation (#82)
       contributed by Gijs van Gemert
  * feature, fullname for address-book contacts (#50)
  * feature, auto-suggest for multiple receivers (#69)

 -- Andreas Unterkircher <unki@netshadow.at>  Sat, 5 Oct 2008 09:57:22 +0200

nephthys (1.2)

  * feature, new privilege for long-time buckets (#41)
  * feature, support for mutli-language (#1)
  * feature, german translation (#42)
  * feature, expirining date now also showes up in notification email (#48)
  * bug, user fullname is now editable via user-management (#38)
  * bug, used-diskspace now displays the real used diskspace (#40)
  * bug, icons and images are now theme-managed too (#39)
  * bug, GPL banners in Nephthys own PHP files now lead to GPLv3 (#43)
  * bug, german umlauts are now handled correct (#46)
  * bug, german umlauts in notification email are now displayed correct (#52)
  * bug, unprivileged users can finally delete their address-book contacts (#54)
  * bug, fixed entering multiple receipients for a bucket (#47)

 -- Andreas Unterkircher <unki@netshadow.at>  Sat, 2 Aug 2008 10:35:47 +0200

nephthys (1.1)

  * feature, internal address book (#18)
  * feature, some usabilitily fixes (#22,#21)
  * feature, config option to hide logout-link (#24)
  * feature, bucket-successfully-created page (#23)
  * feature, show used/free diskspace (#33)
  * bug, fixed some design mistakes (#27)
  * bug, non-auto-created users are now able to update profile (#31)
  * bug, correctly quote SQL queries to avoid syntax errors on special
    characters (#29)
  * bug, fixed sometimes occuring misbehavior of ajaxtabs
  * bug, cleanup code to avoid PHP notice- and warning messages (#35)
  * bug, check if bucket root directory exists and is writeable (#36)
